# moodle

./: .gitignore  db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210302_1614.py  0002_auto_20210323_1943.py  0002_auto_20210421_1906.py  0003_auto_20210323_1946.py
courses/: admin.py  fields.py  models.py  urls.py  views.py
courses/fixtures/: subjects.json
courses/static/css/: base.css
courses/templates/: base.html
courses/templates/registration/: logged_out.html  login.html
educa/: settings.py  urls.py
fixtures/: modules.json
media/files/: SubnetCheatSheet.docx
modules/: admin.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  views.py
modules/migrations/: 0001_initial.py  0002_auto_20210302_1613.py  0002_auto_20210321_2036.py  0002_file_image_resource_text_video.py  0003_auto_20210323_1943.py  0003_module_level.py  0004_module_students.py  0004_topic_tag.py  0005_auto_20210414_2322.py  0006_auto_20210416_1034.py
moodle/: asgi.py  settings.py  urls.py  wsgi.py
students/: forms.py  mixins.py  urls.py  views.py
templates/: base.html  home.html  navbar.html
templates/manage/module/: delete.html  form.html  list.html
templates/manage/resource/: form.html
templates/manage/topic/: formset.html  resource_list.html
templates/module/: _module_search.html  detail.html  list.html
templates/module/content/: file.html
templates/registration/: login.html  signup.html
templates/student/module/: detail.html  list.html
tests/: factories.py
(+3 files in other folders)
